# the_floor

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE.md  PROJECT_STATUS.md  README.md  TEST_COVERAGE_ANALYSIS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: README.md
.claude/commands/: review-task.md
.github/workflows/: deploy.yml  pr-preview.yml
.working/: VIEWSTACK_MIGRATION_GUIDE.md
branch/feature-pr-preview-deployments/: index.html
docs/: ORIGIN.md  PROGRESS_REPORT.md  PROJECT_OVERVIEW.md  SPEC.md
docs/analysis/: EXECUTIVE_SUMMARY.md  INDEX.md  KEY_INSIGHTS.md  README.md  performance-analysis.md
docs/planning/: PARALLEL_WORKSTREAMS.md
docs/status-reports/: 2025-11-01-T+08h13m-mid-session.md  2025-11-01-T+09h19m-basic-mvp.md  2025-11-01-final-status.md  2025-11-02-T+09h44m-post-mvp-polish.md  2025-11-02-T+11h07m-deployed.md  2025-11-02-T+13h31m-final-playable.md  2025-11-02-T+19h46m-post-demo-complete.md  2025-11-02-current-status.md  2025-11-02-mvp-complete.md  2025-11-02-session-complete.md  README.md
docs/tasks/: POST_DEMO_TASK_PLANNING_SUMMARY.md  README.md
public/: 404.html
public/categories/: Minecraft.json  Pets - demo.json
scripts/: README.md  alice-apples.json  batch_convert.py  bobby-barrels.json  cadence-candles.json  diagnose_pptx.py  downscale_pptx_images.py  parse_pptx.py  pyproject.toml
src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
src/components/: CategoryImporter.module.css  CategoryImporter.test.tsx  CategoryImporter.tsx
(+255 files in other folders)
